Formatting + now showing lecture 3

--- a/source/notebooks/HW01.ipynb
+++ b/source/notebooks/HW01.ipynb
@@ -35,7 +35,7 @@
     "\n",
     "## 1. For each part below, type the bash commands to complete the following tasks:\n",
     "\n",
-    "i. Create a directory named 'hw01prob01'"
+    "i. Create a directory named `hw01prob01`"
    ]
   },
   {
@@ -47,7 +47,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "ii. In that directory create a file named 'hopper_quotes.txt' containing the following text (okay to use vim in this part):\n",
+    "ii. In that directory create a file named `hopper_quotes.txt` containing the following text (okay to use vim in this part):\n",
     "\n",
     "> To me programming is more than an important practical art. It is also a gigantic undertaking in the foundations of knowledge.\n",
     "\n",
@@ -77,7 +77,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "iv. In one line of bash commands: make a copy of that file, naming it 'hopper_edited.txt', while changing *every* instance of ' is ' to ' remains ' (spaces added so that only the whole word is replaced, rather than parts of words, like accidentally changing 'this' to 'thremains'). Display the full contents of this edited file."
+    "iv. In one line of bash commands: make a copy of that file, naming it `hopper_edited.txt`, while changing *every* instance of ` is ` to ` remains ` (spaces added so that only the whole word is replaced, rather than parts of words, like accidentally changing 'this' to 'thremains'). Display the full contents of this edited file."
    ]
   },
   {
@@ -89,7 +89,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "v. Make a new file 'combined.txt' with all the contents of 'hopper_quotes.txt' followed by 'hopper_edited.txt'. \n",
+    "v. Make a new file `combined.txt` with all the contents of 'hopper_quotes.txt' followed by `hopper_edited.txt`. \n",
     "Display the total number of lines of this new file."
    ]
   },
@@ -102,7 +102,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "vi. Display the contents of the directory 'hw01prob01' including the permission on each file (additional information may be printed if desired). \n"
+    "vi. Display the contents of the directory `hw01prob01` including the permission on each file (additional information may be printed if desired). \n"
    ]
   },
   {
@@ -114,7 +114,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "vii. Copy the whole directory 'hw01prob01' to a new one named ''hw01prob01_complete'. Compare these directories. Then delete 'hw01prob01' and all its contents."
+    "vii. Copy the whole directory `hw01prob01` to a new one named `hw01prob01_complete`. Compare these directories. Then delete `hw01prob01` and all its contents."
    ]
   },
   {
