--- a/source/notebooks/lecture00_intro.ipynb
+++ b/source/notebooks/lecture00_intro.ipynb
@@ -4,8 +4,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# 0) Welcome to ChE 696, On-Ramp to Data Science!\n",
-    "\n",
+    "# 0) Welcome to ChE 696, On-Ramp to Data Science!"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "### Topics for today:\n",
     "- Motivation for this class\n",
     "- What is data science?\n",
