A few updates to lecture 3

--- a/source/notebooks/Lecture03_intro_python_in_ipynb.ipynb
+++ b/source/notebooks/Lecture03_intro_python_in_ipynb.ipynb
@@ -37,37 +37,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "The Zen of Python, by Tim Peters\n",
-      "\n",
-      "Beautiful is better than ugly.\n",
-      "Explicit is better than implicit.\n",
-      "Simple is better than complex.\n",
-      "Complex is better than complicated.\n",
-      "Flat is better than nested.\n",
-      "Sparse is better than dense.\n",
-      "Readability counts.\n",
-      "Special cases aren't special enough to break the rules.\n",
-      "Although practicality beats purity.\n",
-      "Errors should never pass silently.\n",
-      "Unless explicitly silenced.\n",
-      "In the face of ambiguity, refuse the temptation to guess.\n",
-      "There should be one-- and preferably only one --obvious way to do it.\n",
-      "Although that way may not be obvious at first unless you're Dutch.\n",
-      "Now is better than never.\n",
-      "Although never is often better than *right* now.\n",
-      "If the implementation is hard to explain, it's a bad idea.\n",
-      "If the implementation is easy to explain, it may be a good idea.\n",
-      "Namespaces are one honking great idea -- let's do more of those!\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import this"
    ]
@@ -101,20 +73,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "4"
-      ]
-     },
-     "execution_count": 2,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "2+2"
    ]
@@ -130,20 +91,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "12"
-      ]
-     },
-     "execution_count": 3,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "1*2\n",
     "3*4"
@@ -158,17 +108,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "2\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "result_1 = 1 * 2\n",
     "print(result_1)\n",
@@ -179,22 +121,34 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Python has what is referred to as duck-typing. That is, if it looks like a duck, it calls it a duck."
+    "The numbered lines can are stored and can be accessed!\n",
+    "\n",
+    "I'm demonstrate below that you can embed your variable output in text. The \"\\n\" gives me another new line so it is easier to see the three outputs."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "<class 'str'> <class 'int'> <class 'float'>\n"
-     ]
-    }
-   ],
+   "outputs": [],
+   "source": [
+    "print(\"In is type {} and In = {}\\n\".format(type(In), In))\n",
+    "print(\"The third input was '{}'\\n\".format(In[3]))\n",
+    "print(\"Out is type {} and Out = {}\".format(type(Out), Out))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Note that Python has what is referred to as dynamic, or duck, typing. That is, if it quacks like a duck, it calls it a duck. This is in contrast to languages like C or Java that have static typing, in which the type of variable must be declared. This provides speed and flexibility, but also slows down running because variables are stored both with the value and type. More on this later. "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
    "source": [
     "var_1 = 'che_696-001'\n",
     "var_2 = 4\n",
@@ -211,32 +165,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "<class 'int'> <class 'float'> <class 'str'>\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "var_1 = 8\n",
     "var_2 = 4.2\n",
     "var_3 = 'python is great'\n",
     "print(type(var_1), type(var_2), type(var_3))"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
