--- a/source/notebooks/lecture02_jupyter_notebooks.ipynb
+++ b/source/notebooks/lecture02_jupyter_notebooks.ipynb
@@ -234,7 +234,7 @@
    "source": [
     "## One last cool note about ipynbs, for those who love LaTex\n",
     "\n",
-    "Beautiful equations can written in Markdown cells using LaTex surrounded by `\\\\( ... \\\\)`. For example:"
+    "Beautiful equations can written in Markdown cells using LaTex surrounded by `\\\\\\( ... \\\\\\)` or surrounded by single dollar signs ($) for in-line code and double for rendering on a new line. For example:"
    ]
   },
   {
@@ -249,6 +249,10 @@
    "metadata": {},
    "source": [
     "Will be rendered as: \\\\( P(A \\mid B) = \\frac{P(B \\mid A) \\, P(A)}{P(B)} \\\\)\n",
+    "\n",
+    "If surrounded by \\$'s:  $( P(A \\mid B) = \\frac{P(B \\mid A) \\, P(A)}{P(B)}$ \n",
+    "\n",
+    "If surrounded by \\$\\$'s:  $$( P(A \\mid B) = \\frac{P(B \\mid A) \\, P(A)}{P(B)}$$\n",
     "\n",
     "While I did not add LaTex to our quite-full syllabus, I highly recommend it. "
    ]
