--- a/source/notebooks/lecture00_intro.ipynb
+++ b/source/notebooks/lecture00_intro.ipynb
@@ -28,10 +28,10 @@
    "source": [
     "## Some of the many reasons to learn Data Science (DS)\n",
     "\n",
-    "Many motivations--you each likely have them. My and the departments reasons include:\n",
-    "- We all have greater and greater amounts of data, and thus would benefit from skills to extract meaning and advance our work\n",
-    "- Practical consideration: there are not enough well trained people to fill the demand for jobs\n",
-    "- We want to make learning data science accessible to engineers by condensing multiple prerequisites into one semester\n",
+    "Many motivations--you each likely have them. My and the department's reasons include:\n",
+    "- We all have greater and greater amounts of data, and thus would benefit from skills to extract meaning and advance our work <br>\n",
+    "- Practical consideration: there are not enough well trained people to fill the demand for jobs <br>\n",
+    "- We want to make learning data science accessible to engineers by condensing multiple prerequisites into one semester \n",
     "\n",
     "From https://www.nytimes.com/2017/11/01/education/edlife/stem-jobs-industry-careers.html:\n",
     "![Jobs](images/lect00_NYTJobs.png)\n",
@@ -49,10 +49,10 @@
     "Specific demand for ChE's with Data science training, as noted in the following paper, authored by employees at the Dow Chemical Company:\n",
     "> 88% of chemical industry executives acknowledge that data analytics will be crucial for retaining the competitive advantage in five years\n",
     "\n",
-    ">>Chiang, L.; Lu, B.; Castillo, I. Big Data Analytics in Chemical Engineering. *Annu. Rev. Chem. Biomol. Eng.* **2017**, *8*, 63–85 DOI: 10.1146/annurev-chembioeng-060816-101555.\n",
+    ">> Chiang, L.; Lu, B.; Castillo, I. Big Data Analytics in Chemical Engineering. *Annu. Rev. Chem. Biomol. Eng.* **2017**, *8*, 63–85 DOI: 10.1146/annurev-chembioeng-060816-101555.\n",
     "\n",
     "The National Academies of Sciences, Engineering, and Medicine are actively calling for more data science training:\n",
-    "> https://www.nap.edu/catalog/24886/envisioning-the-data-science-discipline-the-undergraduate-perspective-interim-report\n",
+    "> https://www.nap.edu/catalog/24886/envisioning-the-data-science-discipline-the-undergraduate-perspective-interim-report <br>\n",
     "> https://www.nap.edu/catalog/25104/data-science-for-undergraduates-opportunities-and-options\n",
     "\n",
     "Favorite metaphor from the reports: \n",
@@ -84,25 +84,25 @@
    "source": [
     "## What is the path to \"Data Acumen\"?\n",
     "\n",
-    "NAS reports inform this course and the following in the sequence. They suggest that DS curricula focus on:\n",
-    "- Strong analytical basis\n",
-    "- Oral and written communication\n",
-    "- Use real, \"messy\" data\n",
-    "- Show applications with broad impact\n",
-    "- Discuss ethical implications, such as unreliable and/or biased outcomes\n",
-    "    - https://www.nature.com/news/there-is-a-blind-spot-in-ai-research-1.20805\n",
+    "NAS reports inform this course and the following in the sequence. They suggest that DS curricula focus on: <br>\n",
+    "- Strong analytical basis <br>\n",
+    "- Oral and written communication <br>\n",
+    "- Use real, \"messy\" data <br>\n",
+    "- Show applications with broad impact <br>\n",
+    "- Discuss ethical implications, such as unreliable and/or biased outcomes  <br>\n",
+    "    - https://www.nature.com/news/there-is-a-blind-spot-in-ai-research-1.20805 <br>\n",
     "    - https://www.nature.com/articles/d41586-018-05469-3\n",
     "\n",
     "More specifically, that they provide training in:\n",
-    "- Mathematical foundations\n",
-    "- Computational thinking\n",
-    "- Statistical thinking\n",
-    "- Data management\n",
-    "- Data description and curation\n",
-    "- Data modeling\n",
-    "- Ethical problem solving\n",
-    "- Communication and reproducibility\n",
-    "- Domain-specific considerations"
+    "- Mathematical foundations <br>\n",
+    "- Computational thinking <br>\n",
+    "- Statistical thinking <br>\n",
+    "- Data management <br>\n",
+    "- Data description and curation <br>\n",
+    "- Data modeling <br>\n",
+    "- Ethical problem solving <br>\n",
+    "- Communication and reproducibility <br>\n",
+    "- Domain-specific considerations <br>"
    ]
   },
   {
@@ -111,14 +111,15 @@
    "source": [
     "## What resources are available at Michigan?\n",
     "\n",
-    "This course complements excellent computational and DS resources at Michigan. Under the umbrella of Advanced Research Computing (ARC, http://arc.umich.edu/). Sign up for the newsletter (form at bottom of the page) to find out about upcoming events.\n",
-    "- Michigan Institute for Computational Discovery and Engineering (MICDE), http://micde.umich.edu/\n",
-    "    - Offers both a certificate and PhD that can be earned in parallel to your primary grad degree, http://micde.umich.edu/academic-programs/\n",
-    "    - Seminar series, symposia, ...\n",
-    "- CSCAR (http://cscar.research.umich.edu/) provides consulting services and training opportunities in data science, statistics, and advanced research computation.\n",
-    "- Michigan Institute for Data Science (MIDAS, http://midas.umich.edu/)\n",
-    "    - Hosts training and activities, including a Data Science Team\n",
-    "    - Offers a Certificate in DS\n"
+    "This course complements excellent computational and DS resources at Michigan. Under the umbrella of Advanced Research Computing (ARC, http://arc.umich.edu/). Sign up for the newsletter (form at bottom of the page) to find out about upcoming events. \n",
+    "\n",
+    "- Michigan Institute for Computational Discovery and Engineering (MICDE), http://micde.umich.edu/ <br>\n",
+    "    - Offers both a certificate and PhD that can be earned in parallel to your primary grad degree, http://micde.umich.edu/academic-programs/ <br>\n",
+    "    - Seminar series, symposia, ... <br>\n",
+    "- CSCAR (http://cscar.research.umich.edu/) provides consulting services and training opportunities in data science, statistics, and advanced research computation. <br>\n",
+    "- Michigan Institute for Data Science (MIDAS, http://midas.umich.edu/) <br>\n",
+    "    - Hosts training and activities, including a Data Science Team <br>\n",
+    "    - Offers a Certificate in DS"
    ]
   },
   {
@@ -137,7 +138,6 @@
     "    - We will focus on how computers use linear algebra to solve problems. We will include key terms and numerical implementation.\n",
     "- Probability and statistics\n",
     "    - The focus will not be theory but implementation and how they form the foundation for many DS techniques\n",
-    "   \n",
     "\n",
     "We will not be able to cover all of the these topics in depth. I will introduce you to basics in each area that all of you should learn. I will point to resources for self-study that will likely be of great use to you, but you will not be responsible for knowing for this course."
    ]
